--- a/hdi/hdi_wms/views/stock_quant_warehouse_map.xml
+++ b/hdi/hdi_wms/views/stock_quant_warehouse_map.xml
@@ -6,23 +6,13 @@
         <field name="model">stock.quant</field>
         <field name="inherit_id" ref="stock.view_stock_quant_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//sheet" position="inside">
-                <notebook>
-                    <page string="Sơ đồ Kho">
-                        <group>
-                            <group string="Vị trí trên Sơ đồ">
-                                <field name="pos_x"/>
-                                <field name="pos_y"/>
-                                <field name="pos_z"/>
-                                <field name="display_on_map"/>
-                            </group>
-                            <group string="Thời gian Tồn">
-                                <field name="days_in_warehouse" readonly="1"/>
-                                <field name="in_date" readonly="1"/>
-                            </group>
-                        </group>
-                    </page>
-                </notebook>
+            <xpath expr="//field[@name='owner_id']" position="after">
+                <separator string="Vị trí trên Sơ đồ Kho"/>
+                <field name="pos_x"/>
+                <field name="pos_y"/>
+                <field name="pos_z"/>
+                <field name="display_on_map"/>
+                <field name="days_in_warehouse" readonly="1"/>
             </xpath>
         </field>
     </record>
