--- a/hdi/hdi_wms/views/stock_location_views.xml
+++ b/hdi/hdi_wms/views/stock_location_views.xml
@@ -7,22 +7,22 @@
         <field name="inherit_id" ref="stock.view_location_form"/>
         <field name="arch" type="xml">
 
-            <!-- Add WMS fields after usage -->
-            <field name="usage" position="after">
+            <!-- Add WMS coordinate fields -->
+            <xpath expr="//field[@name='usage']" position="after">
                 <field name="coordinate_x" groups="hdi_wms.group_wms_manager"/>
                 <field name="coordinate_y" groups="hdi_wms.group_wms_manager"/>
                 <field name="coordinate_z" groups="hdi_wms.group_wms_manager"/>
                 <field name="coordinate_display" readonly="1" groups="hdi_wms.group_wms_user"/>
+            </xpath>
+
+            <!-- Add WMS classification and capacity fields -->
+            <xpath expr="//field[@name='company_id']" position="after">
                 <field name="storage_type" groups="hdi_wms.group_wms_manager"/>
                 <field name="moving_class" groups="hdi_wms.group_wms_manager"/>
-            </field>
-
-            <!-- Add capacity fields if there's a capacity group -->
-            <field name="company_id" position="after">
+                <field name="location_priority" groups="hdi_wms.group_wms_manager"/>
                 <field name="max_volume" groups="hdi_wms.group_wms_manager"/>
                 <field name="max_weight" groups="hdi_wms.group_wms_manager"/>
-                <field name="location_priority" groups="hdi_wms.group_wms_manager"/>
-            </field>
+            </xpath>
         </field>
     </record>
 
@@ -32,10 +32,9 @@
         <field name="model">stock.location</field>
         <field name="inherit_id" ref="stock.view_location_tree2"/>
         <field name="arch" type="xml">
-            <field name="usage" position="after">
+            <xpath expr="//field[@name='usage']" position="after">
                 <field name="coordinate_display" optional="show" groups="hdi_wms.group_wms_user"/>
-                <field name="batch_count" optional="show" groups="hdi_wms.group_wms_user"/>
-            </field>
+            </xpath>
         </field>
     </record>
 
