--- a/hdi/hdi_wms/views/stock_location_views.xml
+++ b/hdi/hdi_wms/views/stock_location_views.xml
@@ -1,40 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <!-- Inherit stock.location form view to add WMS fields -->
-    <record id="view_location_form_wms" model="ir.ui.view">
-        <field name="name">stock.location.form.wms</field>
-        <field name="model">stock.location</field>
-        <field name="inherit_id" ref="stock.view_location_form"/>
-        <field name="type">form</field>
-        <field name="arch" type="xml">
-            <xpath expr="//group[@name='address']" position="after">
-                <group string="WMS Coordinates" groups="hdi_wms.group_wms_manager">
-                    <field name="coordinate_x"/>
-                    <field name="coordinate_y"/>
-                    <field name="coordinate_z"/>
-                    <field name="coordinate_display" readonly="1"/>
-                </group>
-                <group string="WMS Configuration" groups="hdi_wms.group_wms_manager">
-                    <field name="storage_type"/>
-                    <field name="moving_class"/>
-                    <field name="location_priority"/>
-                    <field name="temperature_zone"/>
-                </group>
-                <group string="WMS Capacity" groups="hdi_wms.group_wms_manager">
-                    <field name="max_weight"/>
-                    <field name="max_volume"/>
-                    <field name="current_weight"/>
-                    <field name="current_volume"/>
-                </group>
-                <group string="WMS Restrictions" groups="hdi_wms.group_wms_manager">
-                    <field name="is_pickable"/>
-                    <field name="is_putable"/>
-                    <field name="is_counted"/>
-                    <field name="is_mixed_product"/>
-                    <field name="is_mixed_batch"/>
-                </group>
-            </xpath>
-        </field>
-    </record>
-
+    <!-- Stock Location views are handled by core stock module -->
 </odoo>
