--- a/hdi/hdi_wms/views/warehouse_layout_views.xml
+++ b/hdi/hdi_wms/views/warehouse_layout_views.xml
@@ -1,76 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <!-- ===== WAREHOUSE LAYOUT VIEWS ===== -->
-    
-    <!-- Tree View -->
-    <record id="action_warehouse_layout_map" model="ir.actions.act_window">
+    <!-- Simple action for warehouse map -->
+    <record id="action_warehouse_layout_map" model="ir.actions.client">
         <field name="name">Sơ đồ Kho</field>
-        <field name="res_model">hdi.warehouse.layout</field>
-        <field name="view_type">form</field>
-        <field name="view_mode">tree,form</field>
-        <field name="target">main</field>
-    </record>
-
-    <record id="view_warehouse_layout_tree" model="ir.ui.view">
-        <field name="name">hdi.warehouse.layout.tree</field>
-        <field name="model">hdi.warehouse.layout</field>
-        <field name="type">tree</field>
-        <field name="arch" type="xml">
-            <tree>
-                <field name="name"/>
-                <field name="warehouse_id"/>
-                <field name="rows"/>
-                <field name="columns"/>
-                <field name="levels"/>
-                <field name="utilization_rate"/>
-                <field name="occupied_slots"/>
-                <field name="total_slots"/>
-            </tree>
-        </field>
-    </record>
-
-    <!-- Form View with Map -->
-    <record id="view_warehouse_layout_form" model="ir.ui.view">
-        <field name="name">hdi.warehouse.layout.form</field>
-        <field name="model">hdi.warehouse.layout</field>
-        <field name="type">form</field>
-        <field name="arch" type="xml">
-            <form>
-                <sheet>
-                    <group>
-                        <field name="name"/>
-                        <field name="warehouse_id"/>
-                        <field name="rows"/>
-                        <field name="columns"/>
-                        <field name="levels"/>
-                    </group>
-                    <group>
-                        <field name="utilization_rate"/>
-                        <field name="occupied_slots"/>
-                        <field name="total_slots"/>
-                        <field name="empty_slots"/>
-                    </group>
-                </sheet>
-            </form>
-        </field>
-    </record>
-
-    <!-- QWeb Map View (rendered when viewing map) -->
-    <record id="view_warehouse_layout_map_form" model="ir.ui.view">
-        <field name="name">hdi.warehouse.layout.map.form</field>
-        <field name="model">hdi.warehouse.layout</field>
-        <field name="type">form</field>
-        <field name="inherit_id" ref="view_warehouse_layout_form"/>
-        <field name="mode">primary</field>
-        <field name="arch" type="xml">
-            <sheet position="replace">
-                <div>
-                    <button name="action_view_map" type="object" class="btn btn-primary">
-                        <i class="fa fa-map"/> Xem Sơ đồ
-                    </button>
-                </div>
-            </sheet>
-        </field>
+        <field name="type">ir.actions.client</field>
+        <field name="tag">warehouse_map</field>
     </record>
 
 </odoo>
